--- a/Frigate_Camera_Notifications/Beta.yaml
+++ b/Frigate_Camera_Notifications/Beta.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: Frigate Notifications (0.14.0.3i)
+  name: Frigate Notifications (0.14.0.3j)
   author: SgtBatten
   homeassistant:
     min_version: 2024.11.0
@@ -1523,6 +1523,12 @@ actions:
                                   target: "{{telegram_chat_id}}"
                                   caption: "{{message}}"
                                   url: "{{attachment|replace( base_url, telegram_base_url )}}"
+                                  inline_keyboard:
+                                    - [
+                                        ["{{button_1}}", "{{url_1}}"],
+                                        ["{{button_2}}", "{{url_2}}"],
+                                      ]
+                                    - [["{{button_3}}", "{{url_3}}"]]
                           - conditions: "{{ not notify_group_target }}"
                             sequence:
                               - device_id: !input notify_device
