Fix ID used for images

--- a/Frigate_Camera_Notifications/Beta.yaml
+++ b/Frigate_Camera_Notifications/Beta.yaml
@@ -1096,8 +1096,10 @@ actions:
         sequence:
           - variables:
               event: "{{ trigger.payload_json }}"
-              metadata: "{{ event['after']['data']['metadata'] | default({}) }}"
+              detections: "{{ event['after']['data']['detections'] }}"
               review_id: "{{ event['after']['id'] }}"
+              id: "{{ detections[0] }}"
+              metadata: "{{ event['after']['data']['metadata'] | default({}) }}"
               genai_title: "{{ metadata.title | default('') }}"
               genai_shortSummary: "{{ metadata.shortSummary | default('') }}"
               genai_threat_level: "{{ metadata.potential_threat_level | int(0) }}"
